welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:18: error: ':' expected but ')' found.
def remplirTableau1(hauteurMonde):Array[Color] = {
                                ^Array2:34: error: identifier expected but '}' found.
}
^